# azblob-regex-cli

./: README.md
azblobregex/: README.md  pyproject.toml
azblobregex/azblobregex/: command_line.py  core.py
azblobregex/tests/: test_azblobregex.py
